<resources>
    <string name="app_name">My Storage</string>
    <string name="app">MyStorage</string>
    <string name="putaway_name">Putaway</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ok">ok</string>
    <string name="clear">CLEAR</string>
    <string name="palette_id">Pallet ID</string>
    <string name="location_id">Location ID</string>
    <string name="confirm_putaway">Confirm</string>

    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="signIn">SIGN IN</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>


    <string name="text_password_cannot_be_empty">Enter your password</string>
    <string name="text_username_cannot_be_empty">Enter your username </string>
    <string name="text_username_helper">Username must be at least 4 characters long.</string>
    <string name="text_password_must_be_more_five">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">hint</string>
    <string name="tab_to_scan">(tab to scan)</string>
    <string name="undo_string">Undo</string>
    <string name="title_activity_move">MoveActivity</string>
    <string name="move_name">Move</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tabs">MY STORAGE</string>
    <string name="next">NEXT</string>
    <string name="logout">Log out</string>
    <string name="todo">TODO</string>
</resources>
