<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_G_AthensGray"
    tools:context=".loginActivity">

    <include
        android:id="@+id/Tbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/relativeLayout"/>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="393dp"
        android:layout_height="526dp"
        android:layout_gravity="center"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tbar">

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_company_login"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/text_sign_in"
            style="@style/font_PageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_login"
            android:layout_marginTop="20dp"
            android:text="@string/signIn"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_user"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_sign_in"
            android:layout_marginTop="10dp"
            android:theme="@style/edit_login"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user"
                android:imeOptions="actionNext"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_user"
            android:layout_marginTop="10dp"
            android:theme="@style/edit_login"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_proj"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_below="@+id/text_input_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_proj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/app_name"
                android:textColor="@color/color_black"
                android:theme="@style/edit_proj"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bt_sign"
            style="@style/font_FormButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_proj"
            android:layout_alignEnd="@id/text_input_pass"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button"
            android:text="@string/action_sign_in"
            android:textColor="@color/color_white" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
